--- a/src/main/resources/templates/UserHeader.html
+++ b/src/main/resources/templates/UserHeader.html
@@ -4,6 +4,16 @@
         <title>Nav Bar Contents</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--         Latest compiled and minified CSS 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+         Latest compiled JavaScript 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <style>
+            a {
+                text-decoration: none;
+            }
+        </style>    -->
     </head>
     <body>
         <div th:fragment="header">
@@ -18,7 +28,7 @@
                     </div>
                 </div>
                 <div class="mil-top-panel">
-                    <h1>If mai HUUU</h1>
+                    <!--<h1>If mai HUUU</h1>-->
                     <div class="container">
                         <div class="mil-tp-content">
                             <div class="mil-left">
@@ -30,55 +40,21 @@
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
                                     <li class="mil-has-children mil-current">
-                                        <a href="#">Home</a>
+                                        <a href="#">User Login/Sign Up</a>
                                         <ul>
                                             <li>
-                                                <a href="home-1.html">Home type 1</a>
+                                                <a href="/UserSignUp">User Sign Up</a>
                                             </li>
                                             <li>
-                                                <a href="home-2.html">Home type 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-3.html">Home type 3</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-4.html">Home type 4</a>
-                                            </li>
-                                            <li>
-                                                <a href="home-5.html">Home type 5</a>
+                                                <a href="/UserLogin">User Login</a>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#">Services</a>
-                                        <ul>
-                                            <li>
-                                                <a href="services.html">Services</a>
-                                            </li>
-                                            <li>
-                                                <a href="service-1.html">Single service type 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="service-2.html">Single service type 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="subscription.html">Subscription</a>
-                                            </li>
-                                            <li>
-                                                <a href="calculator.html">Price Calculator</a>
-                                            </li>
-                                        </ul>
+                                    <li>
+                                        <a href="/UserChangePassword">Change Password</a>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#">Blog</a>
-                                        <ul>
-                                            <li>
-                                                <a href="blog.html">Blog list</a>
-                                            </li>
-                                            <li>
-                                                <a href="publication.html">Publication</a>
-                                            </li>
-                                        </ul>
+                                    <li>
+                                        <a href="/UserShowBookingHistory">Show Booking History</a>
                                     </li>
                                     <li>
                                         <a href="/Userlogout">Logout</a>
@@ -86,10 +62,10 @@
                                 </ul>
                             </nav>
                             <div class="mil-right mil-jce">
-                                <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
-                                    <i class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden" style="padding-top: .2rem"></i>
-                                    <a href="tel:+380123456789" class="mil-fw-600" data-no-swup>+1 (049) 129-45X7</a>
-                                </div>
+                                <!--                                <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
+                                                                    <i class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden" style="padding-top: .2rem"></i>
+                                                                    <a href="tel:+380123456789" class="mil-fw-600" data-no-swup>+1 (049) 129-45X7</a>
+                                                                </div>-->
                                 <a href="contact.html" class="mil-btn mil-lg mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-icon-btn mil-hover-scale mil-md-hidden"><span>Clean now</span><i class="far fa-magic mil-bg-m-1 mil-a-1"></i></a>
                                 <div class="mil-menu-btn">
                                     <span></span>
@@ -141,7 +117,7 @@
                     </div>
                 </div>
                 <div class="mil-top-panel">
-                    <h1>Else Mai HUU</h1>
+                    <!--<h1>Else Mai HUU</h1>-->
                     <div class="container">
                         <div class="mil-tp-content">
                             <div class="mil-left">
@@ -188,10 +164,10 @@
                                 </ul>
                             </nav>
                             <div class="mil-right mil-jce">
-                                <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
-                                    <i class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden" style="padding-top: .2rem"></i>
-                                    <a href="tel:+380123456789" class="mil-fw-600" data-no-swup>+1 (049) 129-45X7</a>
-                                </div>
+                                <!--                                <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
+                                                                    <i class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden" style="padding-top: .2rem"></i>
+                                                                    <a href="tel:+380123456789" class="mil-fw-600" data-no-swup>+1 (049) 129-45X7</a>
+                                                                </div>-->
                                 <a href="contact.html" class="mil-btn mil-lg mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-icon-btn mil-hover-scale mil-md-hidden"><span>Clean now</span><i class="far fa-magic mil-bg-m-1 mil-a-1"></i></a>
                                 <div class="mil-menu-btn">
                                     <span></span>
