--- a/src/main/resources/templates/UserHome.html
+++ b/src/main/resources/templates/UserHome.html
@@ -219,8 +219,8 @@
                                 </div>
                                 <div class="col-lg-5 col-xxl-3 mil-mb-15">
                                     <div class="mil-hero-reviews-card mil-bg-m-4 mil-br-md">
-                                        <h3 class="mil-fs-32 mil-mb-30">Show Booking <br>History</h3>
-                                        <a href="/UserShowBookingHistory" class="mil-link mil-m-1">Take me there<i class="far fa-arrow-right mil-bg-a-1 mil-m-1" style="padding: .2rem 0 0 .2rem"></i></a>
+                                        <h3 class="mil-fs-32 mil-mb-30">Clean spaces, <br>happy faces</h3>
+                                        <a href="#reviews" class="mil-link mil-m-1">Read Reviews<i class="far fa-arrow-right mil-bg-a-1 mil-m-1" style="padding: .2rem 0 0 .2rem"></i></a>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-xxl-5 mil-mb-15">
